# ci-lab

./: Cargo.toml  Main.lean  Template.lean  _body.md  fibonacci-28db40f.json  fibonacci-54fbee8.json  fibonacci-d36b9f0.json  flake.nix  index.html  lake-manifest.json  lakefile.lean  plot-data.json  rust-toolchain.toml  script.sh
.github/: ISSUE_TEMPLATE.md  NIGHTLY_FAILURE.md  tables.toml
.github/actions/: action.yml
.github/actions/composite-test/: action.yml
.github/templates/: SOLIDITY_COMPAT_ISSUE.md  VERSION_CHECK.md
.github/workflows/: bench-deploy.yml  bench-pr-comment.yml  bench.yml  cargo-command.yml  ci.yml  composite-caller.yml  create-comment.yml  create-issue.yml  custom-script.yml  docs.yml  issue_comment.yml  lean_action_ci.yml  matrix-input.yml  merge-tests.yml  multiline_output.yml  nightly.yml  pr-comment.yml  reusable-caller.yml  reusable-test.yml  rust-version-check.yml  solidity.yml  temp.yml  test-cargo-workflow.yml  test-output.yml  test.yml  typos.yml  warp-custom.yml  warpbuild.yml  workflow-dispatch.yml  zulip-dm.yml
Benchmarks/: Main.lean
benches/: bench.env  fibonacci.rs  justfile
benchmarks/: index.html
benchmarks/criterion/: index.html
benchmarks/criterion/reports/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/0a0afa1-2024-02-02T18_39_28-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/12239d7-2024-02-15T11_16_23-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/14f6592-2024-02-02T18_46_06-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/14ff53f-2024-02-15T10_09_32-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/15afeae-2024-01-30T18_35_02-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/1f20a4e-2024-02-19T14_56_05-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/23e7079-2024-02-14T17_21_53-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/2438124-2024-01-30/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/244991a-2024-02-15T10_05_59-05_00/: index.html
benchmarks/criterion/reports/Fibonacci-num=10/rc-100/: index.html
benchmarks/criterion/reports/Fibonacci-num=20/: index.html
benchmarks/history/: index.html  plot-data.json  plots.html
history/: fibonacci-81a0cb0.json  fibonacci-87651f2.json
src/: data.rs  json.rs  lib.rs  main.rs  plot.rs  test.rs
(+596 files in other folders)
