[package]
name = "criterion-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# chrono version is pinned to be compatible with plotters `build_cartesian_2d` API
chrono = { version = "=0.4.20", features = ["clock"] }
plotters = "0.3.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
criterion = "0.4"
anyhow = "1.0"

[features]
cuda = []

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "bench_test"
harness = false

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16
